added github linkedin

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link href="assets/style.css" rel="stylesheet">
+        <link href="assets/contact.css" rel="stylesheet">
 
     <title>Contact</title>
 </head>
@@ -25,9 +25,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" href="contact.html">Contact <span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="index.html">About Me</a>
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-link" href="https://github.com/Denzale">My GitHub</a>
+                <a class="nav-link active" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="https://github.com/Denzale">My GitHub</a>
+                <a class="nav-link" 
+                href="file:///C:/Users/SUPERdenzie/Desktop/homework/Bio/DenzaleHouston.github.io/assets/Images/Resume.pdf">Resume</a>
+                <a class="nav-link" href="https://www.linkedin.com/in/denzale-houston-a36a971b2/">LinkedIn</a>
             </div>
         </div>
     </nav>
