--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">About Me</a>
+          <a class="nav-link" href="https://github.com/Denzale">My GitHub</a>
+        </li>
+        <!---Image-->
+        <li class="nav-item">
+          <a class="nav-link"
+          href="file:///C:/Users/SUPERdenzie/Desktop/homework/Bio/DenzaleHouston.github.io/assets/Images/Resume.pdf">Resume</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="https://www.linkedin.com/in/denzale-houston-a36a971b2/">LinkedIn</a>
         </li>
       </ul>
     </div>
@@ -40,7 +42,7 @@
   <!-- End Nav -->
   <div class="container">
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-lg-12">
         <div class="page-header">
           <h1>About Me</h1>
         </div>
@@ -51,13 +53,17 @@
           </div>
           <div class="col-md-9">
             <p>
-              My name is Denzale Houston, I am 22 years old. I was born on June 18th 1998. I work at Banner Gateway as a
-              transporter.
-              For my free time I enjoy playing video games and drawing. My favorite show is Jojo's Bizzare Adventure. I
-              have three older brothers,
-              Albert (24) And my oldest Robert (30). My favorite places to go is Shibuya Japan I plan to fly out there
-              again in celebration of finishing
-              this bootcamp! I cant wait!
+              My name is Denzale Houston, I am 22 years old. I am on the road to become a Full-Stack Web Developer. I am currently taught HTML, CSS, Javascript,
+              JQuery, Node.JS, Git, Command and Ajax. Im currently enrolled in the University of Arizona Full-Stack Web Development Program.
+              I am currently working for Banner Health as a transporter. I have built computers as a personal hobby. 
+              After I understood how a computer works, I wanted to learn how to think like a computer
+              and test myself to learn something that will take me on a new jorurney.
+            </p>
+            <br>
+            <p>
+             Prior to working in the program I would self teach myself the basics of HTML and CSS to make side projects of things I personally 
+             found instresting. I would make personal webpages of my favorite video games or movies. Im intrested in video game development and 
+             animation. I like to create personal projects such as editing videos and music.
             </p>
           </div>
         </div>
@@ -78,7 +84,7 @@
   <br>
 
   <div class="footer card-footer text-muted fixed-bottom">
-    <p id="copyright"> @ Denzale Houston 2020</p>
+    <p id="copyright"> @ Denzale Houston 2020
     </p>
   </div>
 
