update resume pdf

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 <a class="nav-link active" href="contact.html">Contact <span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="https://github.com/Denzale">My GitHub</a>
                 <a class="nav-link" 
-                href="file:///C:/Users/SUPERdenzie/Desktop/homework/Bio/DenzaleHouston.github.io/assets/Images/Resume.pdf">Resume</a>
+                href="assets/Images/Resume (3).pdf">Resume</a>
                 <a class="nav-link" href="https://www.linkedin.com/in/denzale-houston-a36a971b2/">LinkedIn</a>
             </div>
         </div>
