--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!---Image-->
         <li class="nav-item">
           <a class="nav-link"
-          href="file:///C:/Users/SUPERdenzie/Desktop/homework/Bio/DenzaleHouston.github.io/assets/Images/Resume.pdf">Resume</a>
+          href="assets/Images/Resume (3).pdf">Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://www.linkedin.com/in/denzale-houston-a36a971b2/">LinkedIn</a>
