--- a/index.html
+++ b/index.html
@@ -1,94 +1,47 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
 
 <head>
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Index</title>
-
-  <!-- Bootstrap CDN -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link href="assets/style.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Justin Brown's Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Krub|Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="assets/style.css">
 
 </head>
 
 <body>
-
-  <!-- Start Nav -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <span class="navbar-brand mb-1 h1">Denzale Houston</span>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/Denzale">My GitHub</a>
-        </li>
-        <!---Image-->
-        <li class="nav-item">
-          <a class="nav-link"
-          href="assets/Images/Resume (3).pdf">Resume</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.linkedin.com/in/denzale-houston-a36a971b2/">LinkedIn</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <!-- End Nav -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="page-header">
-          <h1>About Me</h1>
+    <header id="masthead">
+        <div class="container">
+            <a href="index.html" class="logo" id="anch">Denzale Houston</a>
         </div>
-        <div class="row">
-          <div class="col-md-3">
-            <img src="assets/Images/35496476_1945438335476136_1574482191205793792_o.jpg" alt="Placeholder"
-              class="img-thumbnail">
-          </div>
-          <div class="col-md-9">
-            <p>
-              My name is Denzale Houston, I am 22 years old. I am on the road to become a Full-Stack Web Developer. I am currently taught HTML, CSS, Javascript,
-              JQuery, Node.JS, Git, Command and Ajax. Im currently enrolled in the University of Arizona Full-Stack Web Development Program.
-              I am currently working for Banner Health as a transporter. I have built computers as a personal hobby. 
-              After I understood how a computer works, I wanted to learn how to think like a computer
-              and test myself to learn something that will take me on a new jorurney.
-            </p>
-            <br>
-            <p>
-             Prior to working in the program I would self teach myself the basics of HTML and CSS to make side projects of things I personally 
-             found instresting. I would make personal webpages of my favorite video games or movies. Im intrested in video game development and 
-             animation. I like to create personal projects such as editing videos and music.
-            </p>
-          </div>
+        <div class="container">
+            <nav id="navbar">
+                <a id="anch" href="index.html">Home</a>
+                <a id="anch" href="portfolio.html">Portfolio</a>
+                <a id="anch" href="aboutme.html">About</a>
+                <a id="anch" href="contact.html">Contact</a>
+            </nav>
         </div>
-      </div>
+    </header>
+
+    <div class="jumbotron">
+        <h1 class="display-4">Welcome to my Programs!<br>Denzale Houston's website</h1>
+        <p class="lead">This is a site dedicated to letting you know about me with examples of previous projects.</p>
+        <hr class="my-4">
+        <p class="jumbo-text">It uses utility classes for typography and spacing to space content out within the larger
+            container.</p>
+        <a class="btn btn-color btn-lg" href="aboutme.html" role="button">About Me</a>
     </div>
-  </div>
 
-  <!-- jQuery CDN -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-
-  <!-- Bootstrap JavaScript CDN -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-
-  <br>
-  <br>
-
-  <div class="footer card-footer text-muted fixed-bottom">
-    <p id="copyright"> @ Denzale Houston 2020
-    </p>
-  </div>
-
-
+    <footer>
+        <div class="footer">
+            Copyright 2020&copy;
+        </div>
+    </footer>
 
 </body>
 
