--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
     <div id="main-container" class="container">
         <h3 class="about-me">About Me</h3>
         <section class="main-section">
-            <img src="assets/images/IMG_4468.jpg" alt="Bio Picture" class="bio-image">
+            <img src="assets/images/Japanme.JPG" alt="Bio Picture" class="bio-image">
             <p class="about-text">
                 My name is Denzale Houston, I am 22 years old. I am on the road to become a Full-Stack Web Developer. I am
                 currently taught HTML, CSS, Javascript,
@@ -47,6 +47,11 @@
                 found instresting. I would make personal webpages of my favorite video games or movies. Im intrested in
                 video game development and
                 animation. I like to create personal projects such as editing videos and music.
+              </p>
+
+              <p>
+                  <h2> <a href="https://www.linkedin.com/in/denzale-houston-a36a971b2/">  LinkIn </a>  </h2>
+                  <h2> <a href="https://github.com/Denzale">  GitHub </a>  </h2>
               </p>
         </section>
     </div>
