--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         <h1 class="display-4">Welcome to my Programs!<br>Denzale Houston's website</h1>
         <p class="lead">This is a site dedicated to letting you know about me with examples of previous projects.</p>
         <hr class="my-4">
-        <p class="jumbo-text">It uses utility classes for typography and spacing to space content out within the larger
-            container.</p>
+        <p class="jumbo-text">.</p>
         <a class="btn btn-color btn-lg" href="aboutme.html" role="button">About Me</a>
     </div>
 
